<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_buystock"
            android:icon="@drawable/ic_stock"
            android:title="@string/buy_stock" />
        <item
            android:id="@+id/nav_ipo"
            android:icon="@drawable/ic_ipo"
            android:title="@string/ipo" />
        <item
            android:id="@+id/nav_smeipo"
            android:icon="@drawable/ic_ipo"
            android:title="@string/sme_ipo" />
        <item
            android:id="@+id/nav_mutualFund"
            android:icon="@drawable/ic_mutualfund"
            android:title="@string/mutual_fund" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"
            />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_us" />

        <item
            android:id="@+id/nav_NSE"
            android:icon="@drawable/ic_link"
            android:title="@string/nse_link" />
        <item
            android:id="@+id/nav_BSE"
            android:icon="@drawable/ic_link"
            android:title="@string/bse_link" />
        <item
            android:id="@+id/nav_MSE"
            android:icon="@drawable/ic_link"
            android:title="@string/mse_link" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>
