<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical">


        <!--<ImageView-->
            <!--android:id="@+id/act_login_back"-->
            <!--android:padding="@dimen/_10sdp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="@dimen/_10sdp"-->
            <!--android:layout_marginTop="@dimen/_15sdp"-->
            <!--android:src="@drawable/ic_back_button" />-->

        <LinearLayout
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center"
                android:src="@drawable/splashscreenlogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signIn"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp" />

            <EditText
                android:id="@+id/act_login_username"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/textbg"
                android:gravity="center"
                android:hint="@string/email_hint"

                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/act_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/textbg"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/act_login_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/buttonbg"
                android:gravity="center"
                android:text="@string/signIn"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/act_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/white_underline_light"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/act_login_create_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp" />
        </LinearLayout>


    </LinearLayout>
</layout>