<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/frg_profile_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_image_ll"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">


                <com.github.siyamed.shapeimageview.HexagonImageView
                    android:enabled="false"
                    android:clickable="false"
                    android:id="@+id/frg_profile_image"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholderprofile"
                    app:siBorderColor="@color/dimgray"
                    app:siBorderWidth="2dp" />

                <!--<ImageView-->
                <!--android:enabled="false"-->
                <!--android:id="@+id/frg_profile_image"-->
                <!--android:scaleType="fitXY"-->
                <!--android:src="@drawable/placeholder"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_width="@dimen/_100sdp"-->
                <!--android:layout_height="@dimen/_100sdp" />-->
                <TextView
                    android:id="@+id/edit_photo_txt"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_18sdp"
                    android:background="@color/white_trans"
                    android:drawableLeft="@drawable/ic_photo_camera"
                    android:text="Edit Photo"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:id="@+id/frg_profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:id="@+id/frg_profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:id="@+id/frg_profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_hint"
                    android:textSize="@dimen/_15sdp" />

                <EditText
                    android:id="@+id/frg_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </LinearLayout>


            <Button
                android:id="@+id/frg_profile_edit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bluebuttonbg"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/frg_profile_save_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bluebuttonbg"
                android:text="@string/save_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

            <Button
                android:id="@+id/frg_profile_change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bluebuttonbg"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <!--change Pssword-->

        <LinearLayout
            android:id="@+id/change_password_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:hint="@string/Current_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/new_password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_13sdp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/confirm_password"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/save_changes_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bluebuttonbg"
                android:text="@string/save_changes"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/cancel_change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bluebuttonbg"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/frg_profile_pv"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="BallClipRotatePulseIndicator" />
    </RelativeLayout>
    </ScrollView>
</layout>